gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_lang_versions_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy lang versions
expression: help
---
Toggle version display (on/off)

Usage: gpy lang versions <TOGGLE>

Arguments:
  <TOGGLE>  Enable or disable version display [possible values: on, off]

Options:
  -h, --help  Print help
