gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_palette_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy palette
expression: help
---
Manage palettes (color themes)

Usage: gpy palette <COMMAND>

Commands:
  list      List available palettes
  use       Switch the active palette
  show      Show current palette name
  validate  Validate a palette file or the currently active palette
  import    Import a base16/base24 scheme file as a palette
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
