gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_palette_import_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy palette import
expression: help
---
Import a base16/base24 scheme file as a palette

Usage: gpy palette import [OPTIONS] <FILE>

Arguments:
  <FILE>  Path to a base16/base24 scheme YAML file

Options:
      --name <NAME>  Override the palette name (defaults to the scheme name)
      --force        Overwrite an existing palette of the same name, or shadow a builtin or plugin palette
  -h, --help         Print help
