gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_plugin_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy plugin
expression: help
---
Manage plugins

Usage: gpy plugin <COMMAND>

Commands:
  list      List discovered plugins
  new       Create a new plugin scaffold
  validate  Validate a plugin by path or ID
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
