gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_restart_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy restart
expression: help
---
Restart the background agent

Usage: gpy restart

Options:
  -h, --help  Print help
