gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_segments_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy segments
expression: help
---
List all available segments

Usage: gpy segments

Options:
  -h, --help  Print help
