gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_start_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy start
expression: help
---
Start the background agent

Usage: gpy start

Options:
  -h, --help  Print help
