gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_status_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy status
expression: help
---
Show agent status and diagnostics

Usage: gpy status

Options:
  -h, --help  Print help
