gpy-agent/tests/snapshots/cli_help_snapshot_tests__gpy_stop_help.snap
---
source: tests/cli_help_snapshot_tests.rs
description: gpy stop
expression: help
---
Stop the background agent

Usage: gpy stop

Options:
  -h, --help  Print help
